# my-pre-commit-hook

./: .gitignore  .lint-config  .lint-config.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.md  lint.sh  reqs_for_setup.txt  run.sh  setup.cfg  setup.py
configs/: .flake8  .sourcery.yaml
hook/: __main__.py  run_hooks.py
hook/configs/: pylintrc
test-code/: run_hooks.py
