[metadata]
name = hooks
version = 4.4.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guyedel/my-pre-commit-hook

[options]
python_requires = >=3.7

[options.entry_points]
console_scripts =
    dazz-hooks = hook.run_hooks:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
